Phase 3: CLI on top of PostgreSQL via Spring Boot